--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -5589,6 +5589,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>World Green Design Organization</td>
+      <td>世界绿色设计组织</td>
+      <td>China Association for Science and Technology</td>
+      <td>中国科学技术协会</td>
+      <td>Belgium</td>
+      <td>Environment, Infrastructure, International Relations/Exchange</td>
+      <td>Beijing</td>
+      <td>2020-04-10</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>World Resources Institute</td>
       <td>世界资源研究所</td>
       <td>Ministry of Ecology and Environment (formerly Ministry of Environmental Protection)</td>
