--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -4342,6 +4342,23 @@
       <td>CAF America</td>
       <td>美国慈善援助基金会</td>
       <td>United States</td>
+      <td>JQ for the Rural Kids</td>
+      <td>JQ for the Rural Kids</td>
+      <td>Shanghai City</td>
+      <td>上海市</td>
+      <td>Rural Issues/Development, Youth</td>
+      <td>2020-03-10</td>
+      <td>2020-03-11</td>
+      <td>Shanghai Jiuqian Volunteer Center</td>
+      <td>上海久牵志愿者服务社</td>
+      <td>Non-profit or Foundation</td>
+      <td>Shanghai City, Pudong New District Bureau of Civil Affairs</td>
+      <td>上海市浦东新区民政局</td>
+    </tr>
+    <tr>
+      <td>CAF America</td>
+      <td>美国慈善援助基金会</td>
+      <td>United States</td>
       <td>E.G.G. Walkathon</td>
       <td>一个鸡蛋的暴走筹款</td>
       <td>Shanghai City</td>
@@ -4456,23 +4473,6 @@
       <td>Non-profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
-    </tr>
-    <tr>
-      <td>CAF America</td>
-      <td>美国慈善援助基金会</td>
-      <td>United States</td>
-      <td>JQ for the Rural Kids</td>
-      <td>JQ for the Rural Kids</td>
-      <td>Shanghai City</td>
-      <td>上海市</td>
-      <td>Rural Issues/Development, Youth</td>
-      <td>2020-03-10</td>
-      <td>2020-03-11</td>
-      <td>Shanghai Jiuqian Volunteer Center</td>
-      <td>上海久牵志愿者服务社</td>
-      <td>Non-profit or Foundation</td>
-      <td>Shanghai City, Pudong New District Bureau of Civil Affairs</td>
-      <td>上海市浦东新区民政局</td>
     </tr>
     <tr>
       <td>California Police Athletic Federation</td>
@@ -19377,7 +19377,7 @@
       <td>Infrastructure, Poverty Alleviation</td>
       <td>2019-11-20</td>
       <td>2020-01-20</td>
-      <td>Huaping County People's Government Poverty Alleviation and Development Office</td>
+      <td>Huaping County People’s Government Poverty Alleviation and Development Office</td>
       <td>华坪县人民政府扶贫开发办公室</td>
       <td>Party or Government Entity</td>
       <td>Not Applicable</td>
@@ -19472,7 +19472,7 @@
       <td>Illuminating the Field of Vision Charitable Foundation</td>
       <td>点亮视界慈善基金会</td>
       <td>Unknown</td>
-      <td>Child Eyesight Screening in Guangxi Region, Debao County's Remote Areas</td>
+      <td>Child Eyesight Screening in Guangxi Region, Debao County’s Remote Areas</td>
       <td>点亮视界慈善基金会广西德保偏远地区学生视力筛查活动</td>
       <td>Guangxi Zhuang Autonomous Region</td>
       <td>广西壮族自治区</td>
@@ -26901,23 +26901,6 @@
       <td>New Home Association</td>
       <td>新家园协会有限公司</td>
       <td>Hong Kong</td>
-      <td>2018 “Four Seas One Home ‧ Silk Road Chang’an” Shaanxi-Hong Kong Youth Exchange Activity for Those in the Same Professions</td>
-      <td>2018「四海一家‧丝路长安」陕港同行青年交流活动</td>
-      <td>Shaanxi Province</td>
-      <td>陕西省</td>
-      <td>International Relations/Exchange, Youth</td>
-      <td>2018-08-05</td>
-      <td>2018-08-10</td>
-      <td>Shaanxi Overseas Friendship Association</td>
-      <td>陕西省海外联谊会</td>
-      <td>Non-profit or Foundation</td>
-      <td>United Front Work Department of Shaanxi Committee of CPC</td>
-      <td>中共陕西省委统一战线工作部</td>
-    </tr>
-    <tr>
-      <td>New Home Association</td>
-      <td>新家园协会有限公司</td>
-      <td>Hong Kong</td>
       <td>Developing Public Welfare Activities</td>
       <td>泉州市新家园社会工作服务中心开展公益活动</td>
       <td>Fujian Province</td>
@@ -26930,6 +26913,23 @@
       <td>Non-profit or Foundation</td>
       <td>Quanzhou City Bureau of Civil Affairs</td>
       <td>泉州市民政局</td>
+    </tr>
+    <tr>
+      <td>New Home Association</td>
+      <td>新家园协会有限公司</td>
+      <td>Hong Kong</td>
+      <td>2018 “Four Seas One Home ‧ Silk Road Chang’an” Shaanxi-Hong Kong Youth Exchange Activity for Those in the Same Professions</td>
+      <td>2018「四海一家‧丝路长安」陕港同行青年交流活动</td>
+      <td>Shaanxi Province</td>
+      <td>陕西省</td>
+      <td>International Relations/Exchange, Youth</td>
+      <td>2018-08-05</td>
+      <td>2018-08-10</td>
+      <td>Shaanxi Overseas Friendship Association</td>
+      <td>陕西省海外联谊会</td>
+      <td>Non-profit or Foundation</td>
+      <td>United Front Work Department of Shaanxi Committee of CPC</td>
+      <td>中共陕西省委统一战线工作部</td>
     </tr>
     <tr>
       <td>New Home Association</td>
@@ -43403,6 +43403,176 @@
       <td>Unknown</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Associação de Amizade de Conterrâneos de Seong Soi de San Wui de Macau</td>
+      <td>澳门新会双水同乡联谊会</td>
+      <td>Macau</td>
+      <td>Contributions to Xinhui District, Shuangshui Town to Prevent and Control Novel Coronavirus</td>
+      <td>新会区双水镇防控新冠肺炎疫情捐赠项目</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Health</td>
+      <td>2020-05-11</td>
+      <td>2020-12-31</td>
+      <td>Jiangmen City, Xinhui District, Shuangshui Town Federation of Returned Overseas Chinese</td>
+      <td>江门市新会区双水镇归国华侨联合会</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Fudan University Education Development Foundation (Overseas)</td>
+      <td>复旦大学教育发展基金会（海外）</td>
+      <td>United States</td>
+      <td>Fudan University Scientific Research Program to Combat Novel Coronavirus</td>
+      <td>复旦大学抗击新型冠状病毒肺炎科研攻关项目</td>
+      <td>Shanghai City</td>
+      <td>上海市</td>
+      <td>Education, Health</td>
+      <td>2020-02-24</td>
+      <td>2021-02-23</td>
+      <td>Fudan University Education Development Foundation</td>
+      <td>上海复旦大学教育发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Shanghai Commission of Education</td>
+      <td>上海市教育委员会</td>
+    </tr>
+    <tr>
+      <td>Fudan University Education Development Foundation (Overseas)</td>
+      <td>复旦大学教育发展基金会（海外）</td>
+      <td>United States</td>
+      <td>Fudan University Fund for Novel Coronavirus Medical Treatment</td>
+      <td>复旦大学抗击新冠肺炎医疗基金项目</td>
+      <td>Shanghai City</td>
+      <td>上海市</td>
+      <td>Education, Health</td>
+      <td>2020-03-01</td>
+      <td>2021-03-01</td>
+      <td>Fudan University Education Development Foundation</td>
+      <td>上海复旦大学教育发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Shanghai Commission of Education</td>
+      <td>上海市教育委员会</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Skywalker Charitable Fund Limited</td>
+      <td>香港天行者慈善基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>2020 Skywalker Mountain Region Loving Hearts Activity</td>
+      <td>2020年天行者山区爱心活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Rural Issues/Development, Youth</td>
+      <td>2020-04-10</td>
+      <td>2021-01-31</td>
+      <td>Liannan Yao Autonomous County Ethnic Minority Senior High School</td>
+      <td>连南瑶族自治县民族高级中学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Ng Teng Fong Charitable Foundation Limited</td>
+      <td>黄廷方慈善基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>HD Huangting Fang Environmental Protection Fund</td>
+      <td>环丁黄廷方环保基金</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Environment</td>
+      <td>2020-04-20</td>
+      <td>2021-04-19</td>
+      <td>Beijing HD Environmental Big Data Research Institute</td>
+      <td>北京环丁环保大数据研究院</td>
+      <td>Think Tank or Research Institution</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Ng Teng Fong Charitable Foundation Limited</td>
+      <td>黄廷方慈善基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Tsinghua University Spring Wind Fund—Ng Teng Fong Scientific Research Project</td>
+      <td>清华大学春风基金—黄廷方科研攻关专项</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Education, Science and Technology</td>
+      <td>2020-05-10</td>
+      <td>2021-05-09</td>
+      <td>Tsinghua University Education Foundation</td>
+      <td>清华大学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Nitori International Scholarship Foundation</td>
+      <td>公益财团法人 似鸟国际奖学财团</td>
+      <td>Japan</td>
+      <td>Establishing Donghua University NITORI international Scholarship</td>
+      <td>设立东华大学NITORI国际奖学金</td>
+      <td>Shanghai City</td>
+      <td>上海市</td>
+      <td>Education, International Relations/Exchange</td>
+      <td>2020-03-08</td>
+      <td>2020-12-01</td>
+      <td>Donghua University Education Development Foundation</td>
+      <td>上海东华大学教育发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Shanghai Commission of Education</td>
+      <td>上海市教育委员会</td>
+    </tr>
+    <tr>
+      <td>Philip K.H. Wong Foundation</td>
+      <td>黄乾亨基金</td>
+      <td>Hong Kong</td>
+      <td>Law School Philip K.H. Wong Scholarship, Law School Philip K.H. Wong Teaching Fellowship</td>
+      <td>法学院黄乾亨奖学金、法学院黄乾亨奖教金</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Education, Law and Governance</td>
+      <td>2020-04-20</td>
+      <td>2020-12-31</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Zhejiang University Education Foundation (USA)</td>
+      <td>浙江大学（美国）教育基金会</td>
+      <td>United States</td>
+      <td>Zhejiang University Education Foundation Deparatment of Chemistry Hua Guozhen Education Fund</td>
+      <td>浙江大学教育基金会化学系华国桢教育基金</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Education</td>
+      <td>2020-04-30</td>
+      <td>2021-04-10</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Zhejiang University Education Foundation (USA)</td>
+      <td>浙江大学（美国）教育基金会</td>
+      <td>United States</td>
+      <td>Zhejiang University Art and Archaeology Museum Volunteer Fund</td>
+      <td>浙江大学艺术与考古博物馆志愿者基金</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Arts and Culture, Education</td>
+      <td>2020-04-10</td>
+      <td>2021-03-20</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
     </tr>
   </tbody>
 </table>
