--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -859,17 +859,6 @@
       <td>Gansu</td>
     </tr>
     <tr>
-      <td>Children's Medical Foundation (CMF)</td>
-      <td>儿童医健基金会有限公司</td>
-      <td>Yunnan Health Commission (formerly Yunnan Health and Family Planning Commission)</td>
-      <td>云南省卫生健康委员会</td>
-      <td>Hong Kong</td>
-      <td>Health, Infrastructure, Youth</td>
-      <td>Yunnan</td>
-      <td>2020-03-31</td>
-      <td>Gansu, Guangxi, Guizhou, Hainan, Hebei, Inner Mongolia, Ningxia, Shaanxi, Shanxi, Yunnan</td>
-    </tr>
-    <tr>
       <td>Children’s Education Foundation</td>
       <td>台湾财团法人幼儿教育基金会</td>
       <td>Fujian Department of Education</td>
@@ -901,6 +890,17 @@
       <td>Sichuan</td>
       <td>2018-11-01</td>
       <td>Sichuan</td>
+    </tr>
+    <tr>
+      <td>Children’s Medical Foundation (CMF)</td>
+      <td>儿童医健基金会有限公司</td>
+      <td>Yunnan Health Commission (formerly Yunnan Health and Family Planning Commission)</td>
+      <td>云南省卫生健康委员会</td>
+      <td>Hong Kong</td>
+      <td>Health, Infrastructure, Youth</td>
+      <td>Yunnan</td>
+      <td>2020-03-31</td>
+      <td>Gansu, Guangxi, Guizhou, Hainan, Hebei, Inner Mongolia, Ningxia, Shaanxi, Shanxi, Yunnan</td>
     </tr>
     <tr>
       <td>China Cable Chamber of Commerce (Beijing)</td>
@@ -2551,6 +2551,17 @@
       <td>Hunan</td>
       <td>2017-05-16</td>
       <td>Hunan</td>
+    </tr>
+    <tr>
+      <td>Institute for Sustainable Communities</td>
+      <td>可持续发展合作研究所</td>
+      <td>Chinese People’s Association for Friendship with Foreign Countries</td>
+      <td>中国人民对外友好协会</td>
+      <td>United States</td>
+      <td>Energy, Environment, International Relations/Exchange</td>
+      <td>Beijing</td>
+      <td>2020-04-18</td>
+      <td>Beijing, Guangdong, Hebei, Henan, Hunan, Ningxia, Shanghai, Tianjin, Yunnan, Zhejiang</td>
     </tr>
     <tr>
       <td>Institute for Transportation and Development Policy</td>
@@ -5597,6 +5608,17 @@
       <td>Environment, Infrastructure, International Relations/Exchange</td>
       <td>Beijing</td>
       <td>2020-04-10</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>World Leisure Sports Association</td>
+      <td>世界休闲体育协会</td>
+      <td>Fujian Bureau of Sport</td>
+      <td>福建省体育局</td>
+      <td>United States</td>
+      <td>Infrastructure, International Relations/Exchange, Sport, Trade/Industry Association</td>
+      <td>Fujian</td>
+      <td>2020-04-15</td>
       <td>China</td>
     </tr>
     <tr>
