--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -3873,6 +3873,17 @@
       <td>Henan</td>
     </tr>
     <tr>
+      <td>Nickel Institute</td>
+      <td>镍协会</td>
+      <td>Ministry of Industry and Information Technology</td>
+      <td>中华人民共和国工业和信息化部</td>
+      <td>Canada</td>
+      <td>Law and Governance, Trade/Industry Association</td>
+      <td>Beijing</td>
+      <td>2020-04-25</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Niigata City Industrial Revitalization Financial Group</td>
       <td>公益财团法人新潟市产业振兴财团</td>
       <td>Beijing Commission of Commerce</td>
@@ -4234,6 +4245,17 @@
       <td>Beijing</td>
       <td>2017-08-15</td>
       <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Guangxi, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Shaanxi, Shandong, Shanghai, Shanxi, Sichuan, Tianjin, Yunnan, Zhejiang</td>
+    </tr>
+    <tr>
+      <td>PATH</td>
+      <td>帕斯适宜卫生科技组织</td>
+      <td>Shanghai Commission of Science and Technology</td>
+      <td>上海市科学技术委员会</td>
+      <td>United States</td>
+      <td>Health, Science and Technology</td>
+      <td>Shanghai</td>
+      <td>2020-04-24</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Paulson Institute</td>
