--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -4302,6 +4302,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Pharmaceutical Research and Manufacturers of America</td>
+      <td>美国药品研究与制造企业协会</td>
+      <td>Beijing Commission of Science and Technology</td>
+      <td>北京市科学技术委员会</td>
+      <td>United States</td>
+      <td>Health, Trade/Industry Association</td>
+      <td>Beijing</td>
+      <td>2020-04-28</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Philip Hayden Foundation</td>
       <td>菲利浦海德基金会</td>
       <td>Tianjin Department of Civil Affairs</td>
