--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -582,6 +582,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Aids Healthcare Foundation</td>
+      <td>艾滋病健康基金会</td>
+      <td>United States</td>
+      <td>Donation of Personal Protective Equipment for Medical Use</td>
+      <td>医用防护物品捐赠</td>
+      <td>Chongqing City</td>
+      <td>重庆市</td>
+      <td>Health</td>
+      <td>2020-03-01</td>
+      <td>2020-05-31</td>
+      <td>Chongqing Public Health Center For Medical Treatment</td>
+      <td>重庆市公共卫生医疗救治中心</td>
+      <td>Hospital or Medical Center</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Albert Wu Charitable Trust</td>
       <td>伍威权慈善基金</td>
       <td>Hong Kong</td>
@@ -617,23 +634,6 @@
     </tr>
     <tr>
       <td>Albert Wu Charitable Trust</td>
-      <td>香港伍威权慈善基金</td>
-      <td>Hong Kong</td>
-      <td>Subsidizing Pengjiang Albert Wu Sheltered Workshop Disabled Persons’ Meal Allowance</td>
-      <td>资助蓬江伍威权庇护工场残障人士膳食津贴</td>
-      <td>Guangdong Province (Jiangmen City, Pengjiang District)</td>
-      <td>广东省江门市蓬江区</td>
-      <td>Disabilities, Economic Development, Labor</td>
-      <td>2017-12-07</td>
-      <td>2017-12-31</td>
-      <td>Jiangmeng City, Pengjiang District Albert Wu Sheltered Workshop</td>
-      <td>江门市蓬江区伍威权庇护工场</td>
-      <td>Non-profit or Foundation</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
-    </tr>
-    <tr>
-      <td>Albert Wu Charitable Trust</td>
       <td>伍威权慈善基金</td>
       <td>Hong Kong</td>
       <td>Pengjiang District Financial Aid and Disabled Assistance Program</td>
@@ -648,6 +648,23 @@
       <td>Non-profit or Foundation</td>
       <td>Unknown</td>
       <td>已脱钩</td>
+    </tr>
+    <tr>
+      <td>Albert Wu Charitable Trust</td>
+      <td>香港伍威权慈善基金</td>
+      <td>Hong Kong</td>
+      <td>Subsidizing Pengjiang Albert Wu Sheltered Workshop Disabled Persons’ Meal Allowance</td>
+      <td>资助蓬江伍威权庇护工场残障人士膳食津贴</td>
+      <td>Guangdong Province (Jiangmen City, Pengjiang District)</td>
+      <td>广东省江门市蓬江区</td>
+      <td>Disabilities, Economic Development, Labor</td>
+      <td>2017-12-07</td>
+      <td>2017-12-31</td>
+      <td>Jiangmeng City, Pengjiang District Albert Wu Sheltered Workshop</td>
+      <td>江门市蓬江区伍威权庇护工场</td>
+      <td>Non-profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
     </tr>
     <tr>
       <td>Alliance for Smiles</td>
@@ -2368,6 +2385,23 @@
     </tr>
     <tr>
       <td>Barry &amp; Martin’s Trust</td>
+      <td>贝利·马丁基金会</td>
+      <td>United Kingdom</td>
+      <td>Beijing Home of the Red Ribbon AIDS Patient Care and Concern Program</td>
+      <td>北京红丝带之家艾滋病患者关怀支持项目</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Health</td>
+      <td>2020-04-30</td>
+      <td>2021-04-29</td>
+      <td>The Home Of Red Ribbon</td>
+      <td>北京红丝带之家</td>
+      <td>Non-profit or Foundation</td>
+      <td>Beijing Health Commission (formerly Beijing Health and Family Planning Commission)</td>
+      <td>北京市卫生和计划生育委员会</td>
+    </tr>
+    <tr>
+      <td>Barry &amp; Martin’s Trust</td>
       <td>贝利•马丁基金会</td>
       <td>United Kingdom</td>
       <td>Changchun City Activity to Care for and Assist Those Infected with AIDS</td>
@@ -2756,23 +2790,6 @@
       <td>Non-profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
-    </tr>
-    <tr>
-      <td>Barry &amp; Martin’s Trust</td>
-      <td>贝利·马丁基金会</td>
-      <td>United Kingdom</td>
-      <td>Beijing Home of the Red Ribbon AIDS Patient Care and Concern Program</td>
-      <td>北京红丝带之家艾滋病患者关怀支持项目</td>
-      <td>Beijing City</td>
-      <td>北京市</td>
-      <td>Health</td>
-      <td>2020-04-30</td>
-      <td>2021-04-29</td>
-      <td>The Home Of Red Ribbon</td>
-      <td>北京红丝带之家</td>
-      <td>Non-profit or Foundation</td>
-      <td>Beijing Health Commission (formerly Beijing Health and Family Planning Commission)</td>
-      <td>北京市卫生和计划生育委员会</td>
     </tr>
     <tr>
       <td>Bay Area Hong Kong Center</td>
@@ -5887,6 +5904,23 @@
     </tr>
     <tr>
       <td>Chiang Chen Industrial Charity Foundation</td>
+      <td>蒋震工业慈善基金(香港)有限公司</td>
+      <td>Hong Kong</td>
+      <td>Fudan University Chiang Chen Scholarship (2020)</td>
+      <td>复旦大学蒋震奖学金（2020）</td>
+      <td>Shanghai City</td>
+      <td>上海市</td>
+      <td>Education</td>
+      <td>2020-03-17</td>
+      <td>2021-03-17</td>
+      <td>Fudan University Education Development Foundation</td>
+      <td>上海复旦大学教育发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Shanghai Commission of Education</td>
+      <td>上海市教育委员会</td>
+    </tr>
+    <tr>
+      <td>Chiang Chen Industrial Charity Foundation</td>
       <td>蒋震工业慈善基金（香港）有限公司</td>
       <td>Hong Kong</td>
       <td>Financial Aid Scholarship</td>
@@ -6207,23 +6241,6 @@
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Chiang Chen Industrial Charity Foundation</td>
-      <td>蒋震工业慈善基金(香港)有限公司</td>
-      <td>Hong Kong</td>
-      <td>Fudan University Chiang Chen Scholarship (2020)</td>
-      <td>复旦大学蒋震奖学金（2020）</td>
-      <td>Shanghai City</td>
-      <td>上海市</td>
-      <td>Education</td>
-      <td>2020-03-17</td>
-      <td>2021-03-17</td>
-      <td>Fudan University Education Development Foundation</td>
-      <td>上海复旦大学教育发展基金会</td>
-      <td>Non-profit or Foundation</td>
-      <td>Shanghai Commission of Education</td>
-      <td>上海市教育委员会</td>
     </tr>
     <tr>
       <td>Chiang Cheng Industrial Charity Foundation</td>
@@ -8065,6 +8082,23 @@
       <td>Council on International Educational Exchange (CIEE)</td>
       <td>美国国际教育交流协会</td>
       <td>United States</td>
+      <td>CIEE “Foreign Teachers Come to Chongqing to Teach” Program</td>
+      <td>美国国际教育交流协会“外教来渝任教”项目</td>
+      <td>Chongqing City</td>
+      <td>重庆市</td>
+      <td>Education</td>
+      <td>2020-05-09</td>
+      <td>2021-04-09</td>
+      <td>China Services International Chongqing Market</td>
+      <td>中国国际人才市场重庆市场</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Council on International Educational Exchange (CIEE)</td>
+      <td>美国国际教育交流协会</td>
+      <td>United States</td>
       <td>CIEE Cooperative Program</td>
       <td>美国国际教育交流协会(CIEE)合作项目</td>
       <td>Shanghai City</td>
@@ -8128,23 +8162,6 @@
       <td>Non-profit or Foundation</td>
       <td>Shanghai City, Xuhui District Bureau of Education</td>
       <td>上海市徐汇区教育局</td>
-    </tr>
-    <tr>
-      <td>Council on International Educational Exchange (CIEE)</td>
-      <td>美国国际教育交流协会</td>
-      <td>United States</td>
-      <td>CIEE “Foreign Teachers Come to Chongqing to Teach” Program</td>
-      <td>美国国际教育交流协会“外教来渝任教”项目</td>
-      <td>Chongqing City</td>
-      <td>重庆市</td>
-      <td>Education</td>
-      <td>2020-05-09</td>
-      <td>2021-04-09</td>
-      <td>China Services International Chongqing Market</td>
-      <td>中国国际人才市场重庆市场</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
     </tr>
     <tr>
       <td>Cradle of Hope Adoption Agency</td>
@@ -10134,6 +10151,23 @@
       <td>Non-profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Fok Ying Tung Foundation</td>
+      <td>澳门霍英东基金会</td>
+      <td>Macau</td>
+      <td>Remodeling Panyu District Former Cadre University Professors' Break Room and Teaching Room</td>
+      <td>番禺区老年干部大学教师休息室、教室改造项目</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Aging, Education</td>
+      <td>2020-05-29</td>
+      <td>2020-12-31</td>
+      <td>Guangzhou City, Panyu District Former Cadre Activity Center</td>
+      <td>广州市番禺区老干部活动中心</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
     </tr>
     <tr>
       <td>Fondation Cartier China</td>
@@ -19265,6 +19299,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Hong Kong Tak Hing Clansmen Association Limited</td>
+      <td>香港德庆同乡会有限公司</td>
+      <td>Hong Kong</td>
+      <td>2020 Donation to Combat Novel Coronavirus</td>
+      <td>香港德庆同乡会2020年抗击新冠肺炎疫情捐赠活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Health</td>
+      <td>2020-05-25</td>
+      <td>2020-06-15</td>
+      <td>Deqing County Charitable Association</td>
+      <td>德庆县慈善会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Deqing County Bureau of Civil Affairs</td>
+      <td>德庆县民政局</td>
+    </tr>
+    <tr>
       <td>Hong Kong University Students' Union China Education Association</td>
       <td>香港大学学生会中国教育小组</td>
       <td>Hong Kong</td>
@@ -19634,6 +19685,23 @@
       <td>2021-01-27</td>
       <td>Lanzhou University</td>
       <td>兰州大学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Hu Shi Charitable Education Foundation</td>
+      <td>美国胡氏慈善教育基金会</td>
+      <td>United States</td>
+      <td>Hu Shi Education Student Financial Aid Scholarship Distribution</td>
+      <td>美国胡氏慈善教育奖助学金发放</td>
+      <td>Gansu Province</td>
+      <td>甘肃省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2020-05-13</td>
+      <td>2020-05-15</td>
+      <td>Gansu Agricultural University</td>
+      <td>甘肃农业大学</td>
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
@@ -26085,23 +26153,6 @@
       <td>Million Dollar Round Table (MDRT)</td>
       <td>百万圆桌</td>
       <td>United States</td>
-      <td>Visiting Every Major Insurance Company in Shanghai</td>
-      <td>百万圆桌拜访上海各大保险公司活动</td>
-      <td>Shanghai City</td>
-      <td>上海市</td>
-      <td>Economic Development, Trade/Industry Association</td>
-      <td>2019-10-30</td>
-      <td>2019-11-01</td>
-      <td>Shanghai Pudong International Chamber Of Commerce</td>
-      <td>上海市浦东国际商会</td>
-      <td>Non-Profit or Foundation</td>
-      <td>China Council for the Promotion of International Trade Shanghai Pudong Branch</td>
-      <td>中国国际贸易促进委员会上海浦东分会</td>
-    </tr>
-    <tr>
-      <td>Million Dollar Round Table (MDRT)</td>
-      <td>百万圆桌</td>
-      <td>United States</td>
       <td>Technical Skills Sharing and Exchange with AIA Group and Other Insurance Representatives</td>
       <td>百万圆桌与友邦保险及其保险代理人技能分享和交流活动</td>
       <td>Shanghai City / Beijing City / Jiangsu Province / Guangdong Province</td>
@@ -26114,6 +26165,23 @@
       <td>Non-Profit or Foundation</td>
       <td>Shanghai Federation of Returned Overseas Chinese</td>
       <td>上海市归国华侨联合会</td>
+    </tr>
+    <tr>
+      <td>Million Dollar Round Table (MDRT)</td>
+      <td>百万圆桌</td>
+      <td>United States</td>
+      <td>Visiting Every Major Insurance Company in Shanghai</td>
+      <td>百万圆桌拜访上海各大保险公司活动</td>
+      <td>Shanghai City</td>
+      <td>上海市</td>
+      <td>Economic Development, Trade/Industry Association</td>
+      <td>2019-10-30</td>
+      <td>2019-11-01</td>
+      <td>Shanghai Pudong International Chamber Of Commerce</td>
+      <td>上海市浦东国际商会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>China Council for the Promotion of International Trade Shanghai Pudong Branch</td>
+      <td>中国国际贸易促进委员会上海浦东分会</td>
     </tr>
     <tr>
       <td>MISEREOR Foundation</td>
@@ -29975,6 +30043,23 @@
       <td>陕西省教育厅</td>
     </tr>
     <tr>
+      <td>Panama Overseas Chinese China Peaceful Reunification Promotion Association</td>
+      <td>巴拿马华侨华人中国和平统一促进会</td>
+      <td>Panama</td>
+      <td>Receipt of Donations</td>
+      <td>接收巴拿马华侨华人中国和平统一促进会捐赠</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Unknown</td>
+      <td>2020-01-25</td>
+      <td>2020-09-30</td>
+      <td>Guangzhou City Charitable Association</td>
+      <td>广州市慈善会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Guangzhou City Bureau of Civil Affairs</td>
+      <td>广州市民政局</td>
+    </tr>
+    <tr>
       <td>Partnerships for Community Development Limited</td>
       <td>社区伙伴</td>
       <td>Hong Kong</td>
@@ -32358,6 +32443,23 @@
       <td>Si Yuan Foundation</td>
       <td>思源基金会</td>
       <td>Hong Kong</td>
+      <td>Fudan University Si Yuan Financial Aid Scholarship Fund (2020)</td>
+      <td>复旦大学“香港思源奖助学金”（2020）</td>
+      <td>Shanghai City</td>
+      <td>上海市</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2020-03-19</td>
+      <td>2020-06-30</td>
+      <td>Fudan University Education Development Foundation</td>
+      <td>上海复旦大学教育发展基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Shanghai Commission of Education</td>
+      <td>上海市教育委员会</td>
+    </tr>
+    <tr>
+      <td>Si Yuan Foundation</td>
+      <td>思源基金会</td>
+      <td>Hong Kong</td>
       <td>Zhaoqing University Si Yuan Scholarship Fund</td>
       <td>肇庆学院思源奖学基金</td>
       <td>Guangdong Province (Zhaoqing University)</td>
@@ -32914,23 +33016,6 @@
       <td>Non-profit or Foundation</td>
       <td>Ministry of Education</td>
       <td>教育部</td>
-    </tr>
-    <tr>
-      <td>Si Yuan Foundation</td>
-      <td>思源基金会</td>
-      <td>Hong Kong</td>
-      <td>Fudan University Si Yuan Financial Aid Scholarship Fund (2020)</td>
-      <td>复旦大学“香港思源奖助学金”（2020）</td>
-      <td>Shanghai City</td>
-      <td>上海市</td>
-      <td>Education, Poverty Alleviation</td>
-      <td>2020-03-19</td>
-      <td>2020-06-30</td>
-      <td>Fudan University Education Development Foundation</td>
-      <td>上海复旦大学教育发展基金会</td>
-      <td>Non-profit or Foundation</td>
-      <td>Shanghai Commission of Education</td>
-      <td>上海市教育委员会</td>
     </tr>
     <tr>
       <td>Silicon Valley Community Foundation</td>
@@ -36387,6 +36472,23 @@
       <td>The Hong Kong Yue Clansman Association</td>
       <td>香港余氏宗亲会</td>
       <td>Hong Kong</td>
+      <td>Donations of Goods Taishan City, Wuxi Middle School to Combat the Epidemic</td>
+      <td>香港余氏宗亲会捐赠台山市武溪中学抗疫物资活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Education, Health, Youth</td>
+      <td>2020-02-20</td>
+      <td>2020-12-31</td>
+      <td>Taishan City Wuxi Middle School</td>
+      <td>台山市武溪中学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>The Hong Kong Yue Clansman Association</td>
+      <td>香港余氏宗亲会</td>
+      <td>Hong Kong</td>
       <td>Contribution of Operating Funds for Xinning Magazine</td>
       <td>香港余氏宗亲会捐赠新宁杂志经费活动</td>
       <td>Guangdong Province</td>
@@ -36482,23 +36584,6 @@
       <td>Taishan City, Taicheng Street, Guishui Village Residents Committee</td>
       <td>台山市台城街道桂水村民委员会</td>
       <td>Party or Government Entity</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>The Hong Kong Yue Clansman Association</td>
-      <td>香港余氏宗亲会</td>
-      <td>Hong Kong</td>
-      <td>Donations of Goods Taishan City, Wuxi Middle School to Combat the Epidemic</td>
-      <td>香港余氏宗亲会捐赠台山市武溪中学抗疫物资活动</td>
-      <td>Guangdong Province</td>
-      <td>广东省</td>
-      <td>Education, Health, Youth</td>
-      <td>2020-02-20</td>
-      <td>2020-12-31</td>
-      <td>Taishan City Wuxi Middle School</td>
-      <td>台山市武溪中学</td>
-      <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
     </tr>
@@ -37167,6 +37252,23 @@
     </tr>
     <tr>
       <td>The Mitsubishi UFJ Scholarship Trust Foundation</td>
+      <td>三菱UFJ基金会</td>
+      <td>Japan</td>
+      <td>Mitsubishi Scholarship</td>
+      <td>三菱奖学金</td>
+      <td>Sichuan Province</td>
+      <td>四川省</td>
+      <td>Education</td>
+      <td>2020-02-04</td>
+      <td>2020-03-22</td>
+      <td>Sichuan University Education Foundation</td>
+      <td>四川大学教育基金会</td>
+      <td>Non-profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>The Mitsubishi UFJ Scholarship Trust Foundation</td>
       <td>公益财团法人三菱UFJ国际财团</td>
       <td>Japan</td>
       <td>Mitsubishi UFJ Bank Limited Scholarship</td>
@@ -37229,23 +37331,6 @@
       <td>2019-01-30</td>
       <td>Tsinghua University Education Foundation</td>
       <td>清华大学教育基金会</td>
-      <td>Non-profit or Foundation</td>
-      <td>Ministry of Education</td>
-      <td>教育部</td>
-    </tr>
-    <tr>
-      <td>The Mitsubishi UFJ Scholarship Trust Foundation</td>
-      <td>三菱UFJ基金会</td>
-      <td>Japan</td>
-      <td>Mitsubishi Scholarship</td>
-      <td>三菱奖学金</td>
-      <td>Sichuan Province</td>
-      <td>四川省</td>
-      <td>Education</td>
-      <td>2020-02-04</td>
-      <td>2020-03-22</td>
-      <td>Sichuan University Education Foundation</td>
-      <td>四川大学教育基金会</td>
       <td>Non-profit or Foundation</td>
       <td>Ministry of Education</td>
       <td>教育部</td>
