--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -4599,6 +4599,17 @@
       <td>Guangdong</td>
     </tr>
     <tr>
+      <td>Sichuan Chamber of International Commerce in Hong Kong</td>
+      <td>中国香港四川国际商会</td>
+      <td>Council for the Promotion of International Trade, Sichuan</td>
+      <td>四川省贸促会</td>
+      <td>Hong Kong</td>
+      <td>Economic Development, Trade/Industry Association</td>
+      <td>Sichuan</td>
+      <td>2020-06-05</td>
+      <td>Sichuan</td>
+    </tr>
+    <tr>
       <td>SIL International</td>
       <td>世界少数民族语文研究院</td>
       <td>Yunnan Department of Education</td>
