--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2333,6 +2333,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Holland-China Commercial, Cultural, and Educational Promotion Association</td>
+      <td>荷兰中国商务文化教育促进会</td>
+      <td>Zhejiang Department of Culture and Tourism (formerly Zhejiang Department of Culture)</td>
+      <td>浙江省文化和旅游厅</td>
+      <td>The Netherlands</td>
+      <td>Arts and Culture, Education, International Relations/Exchange, Poverty Alleviation, Sport</td>
+      <td>Zhejiang</td>
+      <td>2020-06-29</td>
+      <td>Jiangsu, Jiangxi, Shanghai, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Holt International</td>
       <td>中华浩德国际基金会</td>
       <td>Ministry of Civil Affairs</td>
